--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <header class="w-full max-w-5xl mx-auto mb-4 flex flex-col md:flex-row items-center justify-between px-2 gap-3">
     <div class="flex items-center gap-3">
       <span class="text-4xl text-red-600"><i class="fas fa-film"></i></span>
-      <span class="text-2xl md:text-3xl font-bold tracking-tight" style="font-family:'Roboto', Arial, sans-serif;">MyMediaWebsite</span>
+      <span class="text-2xl md:text-3xl font-bold tracking-tight" style="font-family:'Roboto', Arial, sans-serif;">MovieHouse</span>
     </div>
     <!-- Signup Link (shows only once and applies everywhere) -->
     <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
@@ -265,7 +265,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -331,7 +331,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -381,7 +381,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -431,7 +431,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f604489" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -483,7 +483,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -533,7 +533,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -583,7 +583,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -641,7 +641,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -691,7 +691,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
@@ -741,7 +741,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
