--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Multi-Frame Media Platform</title>
+  <title>Movie-House</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Tailwind CSS v2.2.19 -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -90,7 +90,7 @@
       <span class="text-2xl md:text-3xl font-bold tracking-tight" style="font-family:'Roboto', Arial, sans-serif;">MovieHouse</span>
     </div>
     <!-- Signup Link (shows only once and applies everywhere) -->
-    <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+    <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
        class="rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base md:text-lg mt-2 md:mt-0"
        style="white-space:nowrap;">
       <i class="fas fa-user-plus mr-2"></i>Free Sign Up Here
@@ -137,7 +137,7 @@
                   <i class="fas fa-lock mr-2"></i>
                   Please create free account to watch full video
                 </div>
-                <a href="https://refreshmentwisertowards.com/fmgc1mbj7i?key=6c1de2c7c0334d3a7cc09645f9317d19" target="_blank"
+                <a href="https://www.profitableratecpm.com/yc3use65mt?key=6c83d3fc675c82e60fb3a22599f60448" target="_blank"
                   class="inline-block rounded-lg px-6 py-2 bg-red-600 bg-opacity-80 text-white font-semibold shadow hover:bg-red-700 transition-all text-base"
                   style="backdrop-filter: blur(1px);">
                   Free Sign Up Here
